# anya

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: cleanup_db.py  config.py  database.py  main.py  test_voice.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  admin.py  analytics.py  appointments.py  auth.py  billing.py  calls.py  departments.py  doctors.py  live_voice.py  patients.py  payments.py  router.py  (+1 more)
backend/app/core/: constants.py  exceptions.py  middleware.py  security.py
backend/app/integrations/: __init__.py  email_client.py  razorpay_client.py  twilio_client.py
backend/app/models/: __init__.py  admin_user.py  appointment.py  audit_log.py  base.py  call_session.py  department.py  doctor.py  emergency_incident.py  invoice.py  notification.py  patient.py  payment.py  schedule.py  slot.py
backend/app/schemas/: __init__.py  analytics.py  appointment.py  auth.py  billing.py  department.py  doctor.py  patient.py  payment.py
backend/app/services/: __init__.py  analytics_service.py  appointment_service.py  billing_service.py  doctor_service.py  notification_service.py  patient_service.py  payment_service.py  slot_service.py
backend/app/tasks/: __init__.py  celery_app.py  notification_tasks.py
backend/app/voice/: __init__.py  bridge.py  emergency.py  handler.py  orchestrator.py  prompts.py  session_manager.py  tool_executor.py  tools.py
backend/scripts/: cleanup_db.py  seed_data.py  update_fees.py
(+45 files in other folders)
