[project]
name = "carevoice-backend"
version = "1.0.0"
description = "CareVoice AI Hospital Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "celery[redis]==5.4.0",
    "httpx==0.28.1",
    "razorpay==1.4.2",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "phonenumbers==8.13.52",
    "email-validator==2.2.0",
    "jinja2==3.1.5",
    "aiosmtplib==3.0.2",
    "setuptools==69.5.1",
    "google-genai>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
